[project]
name = "bet-tracker"
version = "0.1.0"
description = "Manual PnL tracker using Streamlit and Google Sheets"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.28.0",
    "pandas>=2.0.0",
    "st-gsheets-connection>=0.0.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"